Fix styling of intro card on small phones
This fixes the styling of the intro card ('Learn. Share. Connect') which
was overflowing it's card and messing with the width of the page. I just
added some mobile-specific styling (mainly just text-size and image size
tweaks) to address the issue.

closes #1359
pr #1372

--- a/static/scss/home-page.scss
+++ b/static/scss/home-page.scss
@@ -12,6 +12,11 @@
     img {
       width: 67px;
       height: 67px;
+
+      @include breakpoint(phone) {
+        width: 45px;
+        height: 45px;
+      }
     }
   }
 
@@ -31,11 +36,20 @@
       min-width: 240px;
       flex-basis: 240px;
 
+      @include breakpoint(phone) {
+        min-width: 0;
+        padding: 0;
+      }
+
       h3 {
         margin: 0;
         padding: 0 0 8px 0;
         font-size: 24px;
         line-height: 24px;
+
+        @include breakpoint(phone) {
+          font-size: 20px;
+        }
       }
 
       p {
@@ -43,6 +57,10 @@
         padding: 0;
         font-size: 16px;
         color: $font-grey;
+
+        @include breakpoint(phone) {
+          font-size: 14px;
+        }
       }
     }
 
